<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6EAF8">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google_books"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="50dp"
        android:textSize="40sp"
        android:textColor="#FFF"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_below="@id/titleText"
        android:layout_centerHorizontal="true"
        android:src="@drawable/bookslogo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/logo_description"/>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo"
        android:gravity="center"
        >

        <EditText
            android:id="@+id/bookEditText"
            android:padding="14dp"
            android:hint="@string/hint_search"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="book"/>


        <Button
            android:id="@+id/submitButton"
            android:layout_marginTop="24dp"
            android:text="@string/button_submit"
            android:textColor="#fff"
            android:background="#3498DB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>
