<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:padding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/bookImageID"
                android:background="@color/cardview_shadow_end_color"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="10dp"
                android:layout_width="110dp"
                android:layout_height="150dp"/>

            <TextView
                android:id="@+id/bookTitleID"
                android:padding="5dp"
                android:layout_toEndOf="@id/bookImageID"
                android:layout_centerHorizontal="true"
                android:text="@string/book_title"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/bookCategoryID"
                android:padding="5dp"
                android:textSize="12sp"
                android:layout_toEndOf="@id/bookImageID"
                android:text="@string/book_category"
                android:layout_below="@id/bookTitleID"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/bookPriceID"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:layout_below="@id/bookCategoryID"
                android:layout_toEndOf="@id/bookImageID"
                android:text="@string/book_price"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#F39C12"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/bookAuthorID"
                android:padding="5dp"
                android:textSize="12sp"
                android:layout_below="@id/bookPriceID"
                android:layout_toEndOf="@id/bookImageID"
                android:text="@string/book_authors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>